Esqueleto pronto, Levantamentos: estética ok

--- a/levantamentos.html
+++ b/levantamentos.html
@@ -19,7 +19,7 @@
         </nav>
         </header>
 
-        <section class="emConstrucao">
+        <section class="estiloLev">
         <div >
                 
                 <div class="conteiner">
@@ -40,8 +40,10 @@
                                 </div>
                                 <div class="campos">
                                         <label for="resposta"> Total de Parafusos </label>
-                                        <input type="text" name="resposta" id="resultado" readonly>
+                                        <input type="text" name="resposta" id="resultado" >
                                 </div>
+                                
+                                <button class="btnCalc">Calcular</button>
 
                         </div>
 
@@ -51,5 +53,6 @@
 	</section>
 
         <footer>By Logan Esposte</footer>
+        <script src="javascript.js"></script>        
 </body>
 </html>
