Adicioonando imagens dos colaboradores, avanço na aba eletrica

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Meta Parafusos</title>
+	<link rel="icon" type="image/x-icon" href="/Imagens/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -63,7 +64,20 @@
 
 	<div class="equipe">
 		<h2>Equipe</h2>
-		<p>Quem são</p>
+
+		<div class="alinhaequipe">
+			<img src="Imagens/Ezequiel.jpeg" alt="Ezequiel" title="Ezequiel" class="fotoequipe">
+			<img src="Imagens/Logan.jpeg" alt="Logan" title="Logan" class="fotoequipe">
+			<img src="Imagens/Leone.jpeg" alt="Leone" title="Leone" class="fotoequipe">
+		</div>
+		<div class="alinhaequipe">
+			<img src="Imagens/Ana.jpeg" alt="Ana" title="Ana" class="fotoequipe">
+			<img src="Imagens/Mari.jpeg" alt="Mari" title="Mari" class="fotoequipe">
+			<img src="Imagens/Rayenne.jpeg" alt="Rayenne" title="Rayenne" class="fotoequipe">
+		</div>
+		<div class="alinhaequipe">
+			<img src="Imagens/Rafaela.jpeg" alt="Rafaela" title="Rafaela" class="fotoequipe"> 
+
 	</div>
 	</section>
 
