--- a/levantamentos.html
+++ b/levantamentos.html
@@ -3,6 +3,7 @@
 <head>
         <meta charset="utf-8">
         <title>Levantamentos</title>
+        <link rel="icon" type="image/x-icon" href="/Imagens/favicon.ico">
         <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
         </nav>
         </header>
 
-        <section class="estiloLev">
+        <section class="estiloCalc">
         <div >
                 
                 <div class="conteiner">
