--- a/treinamentos.html
+++ b/treinamentos.html
@@ -3,6 +3,7 @@
 <head>
         <meta charset="utf-8">
         <title>Treinamentos</title>
+        <link rel="icon" type="image/x-icon" href="/Imagens/favicon.ico">
         <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
